[gd_scene load_steps=4 format=3 uid="uid://dilxj26x0pqon"]

[ext_resource type="Texture2D" uid="uid://bjfxaniaog4li" path="res://Art/Backgrounds/5.png" id="1_m4yp0"]
[ext_resource type="Script" path="res://Menus/enter_high_score_menu.gd" id="1_pxrvg"]
[ext_resource type="FontFile" uid="uid://cu25dp320eih4" path="res://Art/Fonts/Kaph-Regular.otf" id="2_whegt"]

[node name="EnterHighScoreMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pxrvg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1160.0
offset_bottom = 664.0
texture = ExtResource("1_m4yp0")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 16.0
offset_right = 1008.0
offset_bottom = 152.0
theme_override_colors/font_color = Color(0.929412, 0, 0.768627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_whegt")
theme_override_font_sizes/font_size = 64
text = "CONGRATULATIONS!!!"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 392.0
offset_right = 1190.0
offset_bottom = 528.0
theme_override_colors/font_color = Color(0.929412, 0, 0.768627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_whegt")
theme_override_font_sizes/font_size = 61
text = "YOU SET A NEW HIGH SCORE"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 496.0
offset_right = 512.0
offset_bottom = 576.0
theme_override_colors/font_color = Color(0.929412, 0, 0.768627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_whegt")
theme_override_font_sizes/font_size = 61
text = "SCORE"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 496.0
offset_right = 832.0
offset_bottom = 576.0
theme_override_colors/font_color = Color(0.929412, 0, 0.768627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_whegt")
theme_override_font_sizes/font_size = 61

[node name="NameInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 136.0
offset_right = 752.0
offset_bottom = 232.0
theme_override_fonts/font = ExtResource("2_whegt")
theme_override_font_sizes/font_size = 44
placeholder_text = "Enter Name"
max_length = 10

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 264.0
offset_right = 656.0
offset_bottom = 360.0
theme_override_colors/font_color = Color(0, 0.921569, 0, 1)
theme_override_fonts/font = ExtResource("2_whegt")
theme_override_font_sizes/font_size = 39
text = "SUBMIT"

[connection signal="text_changed" from="NameInput" to="." method="_on_name_input_text_changed"]
[connection signal="text_submitted" from="NameInput" to="." method="_on_name_input_text_submitted"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
